--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.chintanu</groupId>
 	<artifactId>service-rest-jenkins</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>service-rest-jenkins</name>
 	<description>Demo project for REST service using Jenkins</description>
 	<url/>
